v0.1.6 fix#2 overflow images

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -21,7 +21,7 @@ html {
 
 body {
   width: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 h1,
